[package]
name = "dc-aptos"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
alloy = { workspace = true}
anyhow = { workspace = true }
aptos-sdk = { workspace = true }
dc-db = { workspace = true }
dc-mempool = { workspace = true }
dc-metrics = { workspace = true }
dp-transactions = { workspace = true }
dp-utils = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

# Starknet
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }
